--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServer": "Server=127.0.0.1,1433;Database=CarsDb;Uid=developer;Pwd=Xiaomi_MI3;TrustServerCertificate=true;Pooling=true;Connection timeout=5;MultipleActiveResultSets=True"
+    "SqlServer": "Server=127.0.0.1,1433;Uid={0};Pwd={1};Database={2};TrustServerCertificate=true;Pooling=true;Connection timeout=5;MultipleActiveResultSets=True"
   },
   "AllowedHosts": "*"
 }
